--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -310,6 +310,21 @@ button:focus {
 		-ms-grid-columns: 1fr;
 		grid-template-columns: 1fr;
 	}
+
+	.page-header {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-flow: column;
+		        flex-flow: column;
+	}
+
+	.page-main {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-flow: column;
+		        flex-flow: column;
+	}
+ 
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
