500px skyline adjust
removed relative position with 33% left
display: block < flex
min width of 250px added for smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,8 +277,10 @@ button:hover,button:focus {
 }
 
 .skyline {
-	display: block;
-	position: relative;
-	left: 33%;
+	display: flex;
+	text-align: center;
+	text-decoration: none;
+	justify-content: space-around;
+	min-width: 250px;
 	max-width: 500px;
 }
